@@ -8,7 +8,10 @@ BeeBEEP 3.0.6
 - Users can not be removed from group by the other members but they can leave the group if they want to (due serverless)
 - Windows UNC path are parsed and now it can be clickable
 - "Open selected text as url" option added in chat chat window (right click on selected text)
-- "Overwrite existings file" option added 
+- "Overwrite existings file" and "Ask me" option added
+- Fixed a bug in icon of default chat when a new message is arrived
+- Fixed a bug in alert beep when a new message is arrived
+- Fixed a bug on stay on top (windows)
 
 BeeBEEP 3.0.5
 - Added timestamp and datestamp to home activities (option - right click on text)
